--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       align-items: center;
     }
     .hero .profile-image img {
-      width: 100%; /* Increased the size for a bigger profile picture */
-      max-width: 600px; /* Bigger maximum size */
+      width: 200%; /* Increased the size for a bigger profile picture */
+      max-width: 800px; /* Bigger maximum size */
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
@@ -194,25 +194,22 @@
 </head>
 <body>
   <nav>
-    <h1>Welcome</h1>
+    <h1>Arupam Biswas</h1>
     <ul>
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#education">Education</a></li>
-      <li><a href="#research-interests">Research Interests</a></li>
-      <li><a href="#projects">Projects</a></li>
+      <li><a href="#research-interests">Research</a></li>
+      <li><a href="#projects">Publications and Awards</a></li>
       <li><a href="#resources">Resources</a></li>
       <li><a href="#contact">Get in Touch</a></li>
     </ul>
   </nav>
   <section class="hero" id="about-me">
     <div class="about-me">
-      <h2>Hi !!</h2>
+      <h2>Hello,</h2>
       <p>
-        Welcome to my personal website! I'm Arupam Biswas, a passionate neuroscience researcher dedicated to advancing our understanding of the brain and its complexities. 
-        My work focuses on exploring innovative solutions to address challenges in neuroscience and related fields. On this platform, you'll find my projects, publications, 
-        and other resources that reflect my journey as a researcher.
-      </p>
-    </div>
+        Welcome to my personal website! I'm Arupam Biswas, a dedicated neuroscience researcher exploring the brain's complexities. 
+        Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
     <div class="profile-image">
       <img src="your-profile-picture.jpg" alt="Profile Background Image" />
     </div>
