--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
     }
     .hero {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-between;
+      justify-content: center;
       height: 100vh;
       padding: 3rem;
       background: #f9fafb;
     }
     .hero .about-me {
-      width: 50%;
-      text-align: left;
+      text-align: center;
+      margin-bottom: 2rem;
     }
     .hero .about-me h2 {
       font-size: 3.5rem;
@@ -68,14 +68,14 @@
       line-height: 1.8;
     }
     .hero .profile-image {
-      width: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
+      margin-top: 2rem;
     }
     .hero .profile-image img {
-      width: 200%; /* Increased the size for a bigger profile picture */
-      max-width: 800px; /* Bigger maximum size */
+      width: 80%; /* Adjusted size for better responsiveness */
+      max-width: 400px;
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
@@ -83,7 +83,7 @@
     .get-in-touch {
       padding: 3rem;
       background: #ffffff;
-      margin-top: 3rem; /* Added spacing to separate it from the previous section */
+      margin-top: 3rem;
     }
     .get-in-touch h2 {
       font-size: 2.5rem;
@@ -116,7 +116,7 @@
     }
     .social-links a {
       display: inline-block;
-      width: 80px; /* Smaller size for social logos */
+      width: 80px;
       height: 80px;
     }
     .social-links a img {
@@ -171,20 +171,18 @@
     }
     @media (max-width: 768px) {
       .hero {
-        flex-direction: column;
-        text-align: center;
-        padding: 2rem 1rem; /* Reduced padding for smaller screens */
+        padding: 2rem 1rem;
       }
       .hero .about-me {
-        width: 100%;
-        margin-bottom: 2rem; /* Add spacing between the text and the image */
+        margin-bottom: 1.5rem;
       }
-      .hero .profile-image {
-        width: 100%;
+      .hero .profile-image img {
+        width: 90%;
+        max-width: 300px;
       }
       .get-in-touch {
-        margin-top: 5rem; /* Add extra spacing on mobile to ensure separation */
-        padding: 2rem 1rem; /* Adjust padding to fit mobile screens */
+        margin-top: 2rem;
+        padding: 2rem 1rem;
       }
       .social-links {
         flex-direction: row;
@@ -210,6 +208,8 @@
       <p>
         Welcome to my personal website! I'm Arupam Biswas, a dedicated neuroscience researcher exploring the brain's complexities. 
         Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
+      </p>
+    </div>
     <div class="profile-image">
       <img src="your-profile-picture.jpg" alt="Profile Background Image" />
     </div>
