--- a/index.html
+++ b/index.html
@@ -47,16 +47,17 @@
     }
     .hero {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
       height: 100vh;
       padding: 3rem;
       background: #f9fafb;
     }
     .hero .about-me {
-      text-align: center;
-      margin-bottom: 2rem;
+      width: 50%;
+      text-align: left;
+      padding-right: 2rem;
     }
     .hero .about-me h2 {
       font-size: 3.5rem;
@@ -68,14 +69,14 @@
       line-height: 1.8;
     }
     .hero .profile-image {
+      width: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-top: 2rem;
     }
     .hero .profile-image img {
-      width: 80%; /* Adjusted size for better responsiveness */
-      max-width: 400px;
+      width: 100%; /* Takes up full width of the container */
+      max-width: 600px; /* Very big profile picture */
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
@@ -171,14 +172,21 @@
     }
     @media (max-width: 768px) {
       .hero {
+        flex-direction: column;
+        text-align: center;
         padding: 2rem 1rem;
       }
       .hero .about-me {
-        margin-bottom: 1.5rem;
+        width: 100%;
+        padding-right: 0;
+        margin-bottom: 2rem;
+      }
+      .hero .profile-image {
+        width: 100%;
       }
       .hero .profile-image img {
-        width: 90%;
-        max-width: 300px;
+        width: 90%; /* Slightly smaller image for mobile */
+        max-width: 400px;
       }
       .get-in-touch {
         margin-top: 2rem;
@@ -204,9 +212,9 @@
   </nav>
   <section class="hero" id="about-me">
     <div class="about-me">
-      <h2>Hello,</h2>
+      <h2>Hello, I'm Arupam</h2>
       <p>
-        Welcome to my personal website! I'm Arupam Biswas, a dedicated neuroscience researcher exploring the brain's complexities. 
+        Welcome to my personal website!  My work focuses on exploring and addressing challenges in neuroscience, particularly those related to the brain and its complexities. 
         Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
       </p>
     </div>
