--- a/index.html
+++ b/index.html
@@ -75,43 +75,43 @@
       align-items: center;
     }
     .hero .profile-image img {
-      width: 100%; /* Takes up full width of the container */
-      max-width: 600px; /* Very big profile picture */
+      width: 100%;
+      max-width: 600px;
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     }
     .get-in-touch {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 3rem;
       padding: 3rem;
       background: #ffffff;
       margin-top: 3rem;
     }
-    .get-in-touch h2 {
+    .get-in-touch .contact-info {
+      width: 50%;
+    }
+    .get-in-touch .contact-info h2 {
       font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 1.5rem;
-      text-align: center;
     }
-    .contact-info, .contact-form {
-      width: 100%;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-    .contact-info p {
+    .get-in-touch .contact-info p {
       font-size: 1rem;
       line-height: 1.8;
       margin-bottom: 1rem;
     }
-    .contact-info a {
+    .get-in-touch .contact-info a {
       color: #1d4ed8;
       text-decoration: none;
     }
-    .contact-info a:hover {
+    .get-in-touch .contact-info a:hover {
       text-decoration: underline;
     }
     .social-links {
       display: flex;
-      justify-content: center;
       gap: 1.5rem;
       margin-top: 2rem;
     }
@@ -130,6 +130,14 @@
     .social-links a img:hover {
       transform: scale(1.1);
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+    }
+    .contact-form {
+      width: 50%;
+    }
+    .contact-form h2 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 1.5rem;
     }
     .contact-form form {
       display: flex;
@@ -171,29 +179,16 @@
       background-color: #f1f5f9;
     }
     @media (max-width: 768px) {
-      .hero {
-        flex-direction: column;
-        text-align: center;
-        padding: 2rem 1rem;
-      }
-      .hero .about-me {
-        width: 100%;
-        padding-right: 0;
-        margin-bottom: 2rem;
-      }
-      .hero .profile-image {
-        width: 100%;
-      }
-      .hero .profile-image img {
-        width: 90%; /* Slightly smaller image for mobile */
-        max-width: 400px;
-      }
       .get-in-touch {
-        margin-top: 2rem;
+        flex-direction: column;
+        gap: 2rem;
         padding: 2rem 1rem;
+      }
+      .get-in-touch .contact-info, .contact-form {
+        width: 100%;
       }
       .social-links {
-        flex-direction: row;
+        justify-content: center;
       }
     }
   </style>
@@ -212,9 +207,9 @@
   </nav>
   <section class="hero" id="about-me">
     <div class="about-me">
-      <h2>Hello, I'm Arupam</h2>
+      <h2>Hello,</h2>
       <p>
-        Welcome to my personal website!  My work focuses on exploring and addressing challenges in neuroscience, particularly those related to the brain and its complexities. 
+        Welcome to my personal website! I'm Arupam Biswas, a dedicated neuroscience researcher exploring the brain's complexities. 
         Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
       </p>
     </div>
@@ -223,8 +218,8 @@
     </div>
   </section>
   <section class="get-in-touch" id="contact">
-    <h2>Get in Touch</h2>
     <div class="contact-info">
+      <h2>Get in Touch</h2>
       <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
       <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">Venkatesh Lab</a> CSIR-CCMB</p>
       <p><strong>Address:</strong><br>
