--- a/index.html
+++ b/index.html
@@ -81,43 +81,49 @@
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     }
-    .get-in-touch {
-      padding: 5rem;
-      background: #ffffff;
-      margin-top: 3rem;
-      text-align: center;
+    .education-section {
+      padding: 5rem 3rem;
+      background: #f9fafb;
     }
-    .get-in-touch h2 {
+    .education-section h2 {
       font-size: 3rem;
       font-weight: 700;
       margin-bottom: 2rem;
+      text-align: center;
     }
-    .get-in-touch p {
+    .education-subsection {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 3rem;
+    }
+    .education-subsection .content {
+      width: 50%;
+      text-align: left;
+      padding-right: 2rem;
+    }
+    .education-subsection .content h3 {
+      font-size: 2rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+    .education-subsection .content p {
       font-size: 1.2rem;
       line-height: 1.8;
-      margin-bottom: 2rem;
     }
-    .social-links {
+    .education-subsection .image {
+      width: 50%;
       display: flex;
       justify-content: center;
-      gap: 2rem;
-      margin-top: 2rem;
+      align-items: center;
     }
-    .social-links a {
-      display: inline-block;
-      width: 100px;
-      height: 100px;
-    }
-    .social-links a img {
+    .education-subsection .image img {
       width: 100%;
-      height: 100%;
-      object-fit: contain;
-      border-radius: 50%;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .social-links a img:hover {
-      transform: scale(1.1);
-      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+      max-width: 400px;
+      border-radius: 15px;
+      object-fit: cover;
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     }
     footer {
       margin-top: 2rem;
@@ -128,11 +134,17 @@
       background-color: #f1f5f9;
     }
     @media (max-width: 768px) {
-      .get-in-touch {
-        padding: 3rem 1rem;
+      .education-subsection {
+        flex-direction: column;
+        text-align: center;
       }
-      .social-links {
-        flex-direction: row;
+      .education-subsection .content {
+        width: 100%;
+        padding-right: 0;
+        margin-bottom: 1.5rem;
+      }
+      .education-subsection .image {
+        width: 100%;
       }
     }
   </style>
@@ -151,9 +163,9 @@
   </nav>
   <section class="hero" id="about-me">
     <div class="about-me">
-      <h2>Hello, I'm Arupam</h2>
+      <h2>Hello,</h2>
       <p>
-        Welcome to my personal website!  My work focuses on exploring and addressing challenges in neuroscience, particularly those related to the brain and its complexities. 
+        Welcome to my personal website! I'm Arupam Biswas, a dedicated neuroscience researcher exploring the brain's complexities. 
         Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
       </p>
     </div>
@@ -161,34 +173,43 @@
       <img src="your-profile-picture.jpg" alt="Profile Background Image" />
     </div>
   </section>
-  <section class="get-in-touch" id="contact">
-    <h2>Get in Touch</h2>
-    <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
-    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">Venkatesh Lab</a> CSIR-CCMB</p>
-    <p><strong>Address:</strong><br>
-      Institute for Developmental Biology and Neurobiology (iDN)<br>
-      Johannes Gutenberg University Mainz<br>
-      Biozentrum 1<br>
-      Hanns-Dieter-Hüsch-Weg 15<br>
-      55128 Mainz<br>
-      Germany
-    </p>
-    <p>
-      Reach out for research collaborations, speaking engagements, or any questions. I'm always open to new ideas and partnerships!
-    </p>
-    <div class="social-links">
-      <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
-        <img src="facebookff.jpg" alt="Facebook Logo">
-      </a>
-      <a href="https://www.instagram.com/arupambiswas/" target="_blank">
-        <img src="instagram.jpg" alt="Instagram Logo">
-      </a>
-      <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
-        <img src="linkedIn.jpg" alt="LinkedIn Logo">
-      </a>
-      <a href="https://x.com/arupamb07" target="_blank">
-        <img src="twitterFL.jpg" alt="X Logo">
-      </a>
+  <section class="education-section" id="education">
+    <h2>Education</h2>
+
+    <div class="education-subsection">
+      <div class="content">
+        <h3>Undergraduate</h3>
+        <p>
+          Write about your undergraduate education here. Include details about your university, course, and any significant achievements or projects during your undergraduate years.
+        </p>
+      </div>
+      <div class="image">
+        <img src="undergraduate-photo.jpg" alt="Undergraduate Photo" />
+      </div>
+    </div>
+
+    <div class="education-subsection">
+      <div class="content">
+        <h3>PhD</h3>
+        <p>
+          Write about your PhD journey here. Include details about your research focus, your advisor, and any key findings or contributions you made during your PhD.
+        </p>
+      </div>
+      <div class="image">
+        <img src="phd-photo.jpg" alt="PhD Photo" />
+      </div>
+    </div>
+
+    <div class="education-subsection">
+      <div class="content">
+        <h3>Future Plans</h3>
+        <p>
+          Write about your future plans here. Mention what you aim to achieve in the coming years, whether it's further research, a new project, or any other aspirations.
+        </p>
+      </div>
+      <div class="image">
+        <img src="future-plans-photo.jpg" alt="Future Plans Photo" />
+      </div>
     </div>
   </section>
   <footer>
