--- a/index.html
+++ b/index.html
@@ -125,6 +125,44 @@
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     }
+    .get-in-touch {
+      padding: 5rem;
+      background: #ffffff;
+      margin-top: 3rem;
+      text-align: center;
+    }
+    .get-in-touch h2 {
+      font-size: 3rem;
+      font-weight: 700;
+      margin-bottom: 2rem;
+    }
+    .get-in-touch p {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      margin-bottom: 2rem;
+    }
+    .social-links {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+    .social-links a {
+      display: inline-block;
+      width: 100px;
+      height: 100px;
+    }
+    .social-links a img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      border-radius: 50%;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .social-links a img:hover {
+      transform: scale(1.1);
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
+    }
     footer {
       margin-top: 2rem;
       padding: 1rem;
@@ -145,6 +183,12 @@
       }
       .education-subsection .image {
         width: 100%;
+      }
+      .get-in-touch {
+        padding: 3rem 1rem;
+      }
+      .social-links {
+        flex-direction: row;
       }
     }
   </style>
@@ -210,6 +254,36 @@
       <div class="image">
         <img src="future-plans-photo.jpg" alt="Future Plans Photo" />
       </div>
+    </div>
+  </section>
+  <section class="get-in-touch" id="contact">
+    <h2>Get in Touch</h2>
+    <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
+    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">Venkatesh Lab</a> CSIR-CCMB</p>
+    <p><strong>Address:</strong><br>
+      Institute for Developmental Biology and Neurobiology (iDN)<br>
+      Johannes Gutenberg University Mainz<br>
+      Biozentrum 1<br>
+      Hanns-Dieter-Hüsch-Weg 15<br>
+      55128 Mainz<br>
+      Germany
+    </p>
+    <p>
+      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
+    </p>
+    <div class="social-links">
+      <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+        <img src="facebookff.jpg" alt="Facebook Logo">
+      </a>
+      <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+        <img src="instagram.jpg" alt="Instagram Logo">
+      </a>
+      <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+        <img src="linkedIn.jpg" alt="LinkedIn Logo">
+      </a>
+      <a href="https://x.com/arupamb07" target="_blank">
+        <img src="twitterFL.jpg" alt="X Logo">
+      </a>
     </div>
   </section>
   <footer>
