--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Arupam Biswas | Neuroscience Research</title>
+  <title>Arupam Biswas</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * {
@@ -207,9 +207,12 @@
   </nav>
   <section class="hero" id="about-me">
     <div class="about-me">
-      <h2>Hello,</h2>
+      <h2>Hello, I'm Arupam</h2>
       <p>
-        Welcome to my personal website! I'm Arupam Biswas, a dedicated neuroscience researcher exploring the brain's complexities. 
+        Welcome to my personal website! I am a Neuroscience Researcher at Institute of Developmental Biology and Neurobiology (iDN), Johannes Gutenberg University Mainz. 
+        Neurological diseases are not only permanently debilitating but are the fastest growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date there are no therapies available. 
+        At Mainz University and the Max Planck Institute for Polymer Research, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments of multiple sclerosis and traumatic brain and spinal cord injuries. We aim to create interactive synthetic biomaterials that stimulate cell growth and regeneration through a suitable environment, while also enabling a controlled and targeted release of drugs for high efficacy and low risk of side effects.
+        Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
         Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
       </p>
     </div>
