--- a/index.html
+++ b/index.html
@@ -67,16 +67,17 @@
     .hero .about-me p {
       font-size: 1.2rem;
       line-height: 1.8;
+      margin-bottom: 1.5rem;
     }
     .hero .profile-image {
-      width: 50%;
+      width: 45%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 600px;
+      max-width: 500px;
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
@@ -208,13 +209,10 @@
   <section class="hero" id="about-me">
     <div class="about-me">
       <h2>Hello, I'm Arupam</h2>
-      <p>
-        Welcome to my personal website! I am a Neuroscience Researcher at Institute of Developmental Biology and Neurobiology (iDN), Johannes Gutenberg University Mainz. 
-        Neurological diseases are not only permanently debilitating but are the fastest growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date there are no therapies available. 
-        At Mainz University and the Max Planck Institute for Polymer Research, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments of multiple sclerosis and traumatic brain and spinal cord injuries. We aim to create interactive synthetic biomaterials that stimulate cell growth and regeneration through a suitable environment, while also enabling a controlled and targeted release of drugs for high efficacy and low risk of side effects.
-        Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
-        Here, you'll find my projects, publications, and innovative solutions in neuroscience. Enjoy your visit!
-      </p>
+      <p>Welcome to my personal website! I am a Neuroscience Researcher at the Institute of Developmental Biology and Neurobiology (iDN), Johannes Gutenberg University Mainz.</p>
+      <p>Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.</p>
+      <p>At Mainz University and the Max Planck Institute for Polymer Research, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries.</p>
+      <p>Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!</p>
     </div>
     <div class="profile-image">
       <img src="your-profile-picture.jpg" alt="Profile Background Image" />
@@ -222,7 +220,6 @@
   </section>
   <section class="education-section" id="education">
     <h2>Education</h2>
-
     <div class="education-subsection">
       <div class="content">
         <h3>Undergraduate</h3>
@@ -234,7 +231,6 @@
         <img src="undergraduate-photo.jpg" alt="Undergraduate Photo" />
       </div>
     </div>
-
     <div class="education-subsection">
       <div class="content">
         <h3>PhD</h3>
@@ -246,7 +242,6 @@
         <img src="phd-photo.jpg" alt="PhD Photo" />
       </div>
     </div>
-
     <div class="education-subsection">
       <div class="content">
         <h3>Future Plans</h3>
