--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+Here is the updated HTML code with paragraphs added in the introduction and adjustments made to the image layout to align it with the new structure:
+
+```html name=updated_index.html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Arupam Biswas</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Pacifico&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     * {
       box-sizing: border-box;
@@ -15,26 +18,23 @@
     body {
       font-family: 'Outfit', sans-serif;
       color: #0f172a;
-      background: linear-gradient(to bottom, #fdfbfb, #ebedee);
     }
     nav {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 1.2rem 2rem;
+      background: white;
+      padding: 1.5rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
-      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
     nav h1 {
-      font-family: 'Pacifico', cursive;
-      font-size: 1.8rem;
-      color: #1d4ed8;
+      font-weight: 700;
+      font-size: 1.5rem;
     }
     nav ul {
       list-style: none;
       display: flex;
-      gap: 1.5rem;
+      gap: 1.8rem;
     }
     nav ul li {
       font-weight: 600;
@@ -43,11 +43,10 @@
     nav ul li a {
       text-decoration: none;
       color: #0f172a;
-      transition: color 0.3s ease, transform 0.3s ease;
+      transition: color 0.3s ease;
     }
     nav ul li a:hover {
       color: #1d4ed8;
-      transform: scale(1.1);
     }
     .hero {
       display: flex;
@@ -56,7 +55,7 @@
       justify-content: space-between;
       height: 100vh;
       padding: 3rem;
-      background: linear-gradient(to right, #d4fc79, #96e6a1);
+      background: #f9fafb;
     }
     .hero .about-me {
       width: 50%;
@@ -67,13 +66,11 @@
       font-size: 3.5rem;
       font-weight: 700;
       margin-bottom: 1.5rem;
-      color: #0d9488;
     }
     .hero .about-me p {
       font-size: 1.2rem;
       line-height: 1.8;
       margin-bottom: 1.5rem;
-      color: #065f46;
     }
     .hero .profile-image {
       width: 45%;
@@ -83,15 +80,10 @@
     }
     .hero .profile-image img {
       width: 100%;
-      max-width: 450px;
-      border-radius: 50%;
+      max-width: 500px;
+      border-radius: 15px;
       object-fit: cover;
-      box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.3);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-    .hero .profile-image img:hover {
-      transform: scale(1.05);
-      box-shadow: 0px 8px 30px rgba(0, 0, 0, 0.4);
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     }
     .education-section {
       padding: 5rem 3rem;
@@ -102,7 +94,6 @@
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
-      color: #2563eb;
     }
     .education-subsection {
       display: flex;
@@ -120,12 +111,10 @@
       font-size: 2rem;
       font-weight: 600;
       margin-bottom: 1rem;
-      color: #0f172a;
     }
     .education-subsection .content p {
       font-size: 1.2rem;
       line-height: 1.8;
-      color: #374151;
     }
     .education-subsection .image {
       width: 50%;
@@ -139,17 +128,12 @@
       border-radius: 15px;
       object-fit: cover;
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
-      transition: transform 0.3s ease;
-    }
-    .education-subsection .image img:hover {
-      transform: translateY(-10px);
     }
     .get-in-touch {
       padding: 5rem;
-      background: linear-gradient(to right, #fbc2eb, #a6c1ee);
+      background: #ffffff;
       margin-top: 3rem;
       text-align: center;
-      color: #ffffff;
     }
     .get-in-touch h2 {
       font-size: 3rem;
@@ -169,8 +153,8 @@
     }
     .social-links a {
       display: inline-block;
-      width: 80px;
-      height: 80px;
+      width: 100px;
+      height: 100px;
     }
     .social-links a img {
       width: 100%;
@@ -180,8 +164,8 @@
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .social-links a img:hover {
-      transform: scale(1.2);
-      box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.4);
+      transform: scale(1.1);
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
     }
     footer {
       margin-top: 2rem;
@@ -192,18 +176,6 @@
       background-color: #f1f5f9;
     }
     @media (max-width: 768px) {
-      .hero {
-        flex-direction: column;
-        text-align: center;
-      }
-      .hero .about-me {
-        width: 100%;
-        padding-right: 0;
-      }
-      .hero .profile-image {
-        width: 100%;
-        margin-top: 2rem;
-      }
       .education-subsection {
         flex-direction: column;
         text-align: center;
@@ -226,6 +198,98 @@
   </style>
 </head>
 <body>
-  <!-- The content remains unchanged; only the CSS styles were updated -->
+  <nav>
+    <h1>Arupam Biswas</h1>
+    <ul>
+      <li><a href="#about-me">About Me</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#research-interests">Research</a></li>
+      <li><a href="#projects">Publications and Awards</a></li>
+      <li><a href="#resources">Resources</a></li>
+      <li><a href="#contact">Get in Touch</a></li>
+    </ul>
+  </nav>
+  <section class="hero" id="about-me">
+    <div class="about-me">
+      <h2>Hello, I'm Arupam</h2>
+      <p>Welcome to my personal website! I am a Neuroscience Researcher at the Institute of Developmental Biology and Neurobiology (iDN), Germany.</p>
+      <p>Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.</p>
+      <p>At Mainz University and the Max Planck Institute for Polymer Research, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries.</p>
+      <p>Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!</p>
+    </div>
+    <div class="profile-image">
+      <img src="your-profile-picture.jpg" alt="Profile Background Image" />
+    </div>
+  </section>
+  <section class="education-section" id="education">
+    <h2>Education</h2>
+    <div class="education-subsection">
+      <div class="content">
+        <h3>Undergraduate</h3>
+        <p>
+          Write about your undergraduate education here. Include details about your university, course, and any significant achievements or projects during your undergraduate years.
+        </p>
+      </div>
+      <div class="image">
+        <img src="undergraduate-photo.jpg" alt="Undergraduate Photo" />
+      </div>
+    </div>
+    <div class="education-subsection">
+      <div class="content">
+        <h3>PhD</h3>
+        <p>
+          Write about your PhD journey here. Include details about your research focus, your advisor, and any key findings or contributions you made during your PhD.
+        </p>
+      </div>
+      <div class="image">
+        <img src="phd-photo.jpg" alt="PhD Photo" />
+      </div>
+    </div>
+    <div class="education-subsection">
+      <div class="content">
+        <h3>Future Plans</h3>
+        <p>
+          Write about your future plans here. Mention what you aim to achieve in the coming years, whether it's further research, a new project, or any other aspirations.
+        </p>
+      </div>
+      <div class="image">
+        <img src="future-plans-photo.jpg" alt="Future Plans Photo" />
+      </div>
+    </div>
+  </section>
+  <section class="get-in-touch" id="contact">
+    <h2>Get in Touch</h2>
+    <p><strong>Email:</strong> arupambiswas007@gmail.com</p>
+    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">Venkatesh Lab</a> CSIR-CCMB</p>
+    <p><strong>Address:</strong><br>
+      Institute for Developmental Biology and Neurobiology (iDN)<br>
+      Johannes Gutenberg University Mainz<br>
+      Biozentrum 1<br>
+      Hanns-Dieter-Hüsch-Weg 15<br>
+      55128 Mainz<br>
+      Germany
+    </p>
+    <p>
+      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
+    </p>
+    <div class="social-links">
+      <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+        <img src="facebookff.jpg" alt="Facebook Logo">
+      </a>
+      <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+        <img src="instagram.jpg" alt="Instagram Logo">
+      </a>
+      <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+        <img src="linkedIn.jpg" alt="LinkedIn Logo">
+      </a>
+      <a href="https://x.com/arupamb07" target="_blank">
+        <img src="twitterFL.jpg" alt="X Logo">
+      </a>
+    </div>
+  </section>
+  <footer>
+    © 2025 Arupam Biswas. All rights reserved.
+  </footer>
 </body>
 </html>
+```
