--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       <h2>Hello, I'm Arupam</h2>
       <p>
       Welcome to my personal website! I am a Neuroscience Researcher at the
-      <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: underline;">
+      <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
         Institute of Developmental Biology and Neurobiology (iDN),
       </a> Germany.
       <p>Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.</p>
