--- a/index.html
+++ b/index.html
@@ -210,15 +210,23 @@
     <div class="about-me">
       <h2>Hello, I'm Arupam</h2>
       <p>
-      Welcome to my personal website! I am a Neuroscience Researcher at the
-      <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
-        Institute of Developmental Biology and Neurobiology (iDN),
-      </a> Germany.
-      <p>Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.</p>
-      <p>At Johannes Gutenberg University Mainz University
-      <a href="https://www.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
-      </a> , collaborating with the Max Planck Institute for Polymer Research, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries.</p>
-      <p>Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!</p>
+        Welcome to my personal website! I am a Neuroscience Researcher at the
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
+          Institute of Developmental Biology and Neurobiology (iDN),
+        </a> Germany.
+      </p>
+      <p>
+        Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.
+      </p>
+      <p>
+        At
+        <a href="https://www.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
+          Johannes Gutenberg University Mainz
+        </a>, collaborating with the Max Planck Institute for Polymer Research, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries.
+      </p>
+      <p>
+        Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
+      </p>
     </div>
     <div class="profile-image">
       <img src="your-profile-picture.jpg" alt="Profile Background Image" />
