--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
       <p>
         Welcome to my personal website! I am a Neuroscience Researcher at the
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank" style="color: #1d4ed8; text-decoration: none;">
-          Institute of Developmental Biology and Neurobiology (iDN),
-        </a> Germany.
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a> ,Germany.
       </p>
       <p>
         Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.
