--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <h2>Education</h2>
     <div class="education-subsection">
       <div class="content">
-        <h3>Undergraduate</h3>
+        <h3>Undergraduate and Post-graduate</h3>
         <p>
           Write about your undergraduate education here. Include details about your university, course, and any significant achievements or projects during your undergraduate years.
         </p>
