--- a/index.html
+++ b/index.html
@@ -194,10 +194,6 @@
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
           Institute of Developmental Biology and Neurobiology (iDN)
         </a>, Germany.
-      </p>
-      <p>
-        Neurological diseases are not only permanently debilitating but are the fastest-growing cause of death among non-communicable diseases. Strategies to promote repair of the nervous system are extremely rare, and to date, there are no therapies available.
-      </p>
       <p>
         At
         <a href="https://www.uni-mainz.de/" target="_blank">
@@ -205,7 +201,7 @@
         </a>, in collaboration with the
         <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
           Max Planck Institute for Polymer Research
-        </a>, our interdisciplinary team combines neurobiology, neuroimmunology, chemistry, and polymer research to develop new strategies for regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries.
+        </a>, our interdisciplinary team is pioneering new regenerative treatments for multiple sclerosis and traumatic brain and spinal cord injuries. By merging neurobiology, neuroimmunology, chemistry, and polymer research, we're developing innovative strategies to heal the nervous system.
       </p>
       <p>
         Beyond the lab, I enjoy cooking and exploring new places. If you share an interest in neurobiology, regenerative medicine, or the molecular mechanisms of brain repair, I would love to connect!
