--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
 </head>
 <body>
   <nav>
-    <h1>Arupam Biswas</h1>
+    <h1>Hello, I'm Arupam</h1>
     <ul>
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#education">Education</a></li>
-      <li><a href="#research-interests">Research</a></li>
-      <li><a href="#projects">Publications and Awards</a></li>
-      <li><a href="#resources">Resources</a></li>
-      <li><a href="#contact">Get in Touch</a></li>
+      <li><a href="#research">Research</a></li>
+      <li><a href="#publications-and-awards">Publications and Awards</a></li>
+      <li><a href="#gallary">Gallary</a></li>
+      <li><a href="#get-in-touch">Get in Touch</a></li>
     </ul>
   </nav>
   <section class="hero" id="about-me">
