--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 </head>
 <body>
   <nav>
-    <h1>Arupam Biswas</h1>
+    <h1>Hello, I'm Arupam</h1>
     <ul>
       <li><a href="#about-me">About Me</a></li>
       <li><a href="#education">Education</a></li>
