--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <img src="facebookff.jpg" alt="Facebook Logo">
         </a>
         <a href="https://www.instagram.com/arupambiswas/" target="_blank">
-          <img src="instagram.jpg" alt="Instagram Logo">
+          <img src="InstagramF.jpg" alt="Instagram Logo">
         </a>
         <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
